--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-24  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in: Update dependencies.
+
 2012-06-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in (TIMESPEC_H): Remove nt/inc/sys/time.h.
