--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-24  Eli Zaretskii  <eliz@gnu.org>
+
+	* config.nt (_Noreturn): Don't reference __SUNPRO_C.
+
 2012-06-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Switch from NO_RETURN to C11's _Noreturn (Bug#11750).
