--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-24  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* sysdep.c (setpgrp): Remove definition, not used in this file.
+
 2012-06-24  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in: Update dependencies.
