--- a/doc/emacs/fixit.texi
+++ b/doc/emacs/fixit.texi
@@ -35,7 +35,7 @@ These were described earlier in this manual.  @xref{Erasing}.
   The @dfn{undo} command reverses recent changes in the buffer's text.
 Each buffer records changes individually, and the undo command always
 applies to the current buffer.  You can undo all the changes in a
-buffer for as far as back its records go.  Usually, each editing
+buffer for as far back as the buffer's records go.  Usually, each editing
 command makes a separate entry in the undo records, but some commands
 such as @code{query-replace} divide their changes into multiple
 entries for flexibility in undoing.  Consecutive character insertion
