* configure.in (AC_CHECK_FUNCS): Detect library functions strcasecmp and strncasecmp. * lib-src/etags.c (etags_strcasecmp, etags_strncasecmp): Define to library functions strcasecmp and strncasecmp if available. * lwlib/lwlib.c (my_strcasecmp): Rename to lwlib_strcasecmp, which may be defined to library function strcasecmp if available. * src/dispextern.c (xstrcasecmp): Define to library function strcasecmp if available. * src/xfaces.c: Do not use xstrcasecmp if strcasecmp is available.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-25  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* configure.in (AC_CHECK_FUNCS): Detect library functions
+	strcasecmp and strncasecmp.
+
 2012-06-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Switch from NO_RETURN to C11's _Noreturn (Bug#11750).
