--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-25  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* etags.c (etags_strcasecmp, etags_strncasecmp): Define to
+	library functions strcasecmp and strncasecmp if available.
+
 2012-06-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Switch from NO_RETURN to C11's _Noreturn (Bug#11750).
