--- a/msdos/ChangeLog
+++ b/msdos/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-26  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Clean out last vestiges of the old HAVE_CONFIG_H stuff.
+	* sedlibmk.inp (DEFS): Don't add -DHAVE_CONFIG_H.
+
 2012-06-11  Glenn Morris  <rgm@gnu.org>
 
 	* sed2v2.inp (SYSTEM_TYPE): Set it.
