--- a/doc/emacs/fixit.texi
+++ b/doc/emacs/fixit.texi
@@ -109,9 +109,9 @@ Emacs to hold text that users don't normally look at or edit.
 @vindex undo-strong-limit
 @vindex undo-outer-limit
 @cindex undo limit
-  When the undo records for a buffer becomes too large, Emacs discards
-the oldest undo records from time to time (during @dfn{garbage
-collection}).  You can specify how much undo records to keep by
+  When the undo information for a buffer becomes too large, Emacs discards
+the oldest records from time to time (during @dfn{garbage
+collection}).  You can specify how much undo information to keep by
 setting the variables @code{undo-limit}, @code{undo-strong-limit}, and
 @code{undo-outer-limit}.  Their values are expressed in bytes.
 
