* src/alloc.c: Remove build_string. * src/lisp.h: Define build_string as static inline.  This provides a better opportunity to optimize away calls to strlen when the function is called with compile-time constant argument. * src/image.c (imagemagick_error): Convert to build_string. * src/w32proc.c (sys_spawnve): Likewise. * src/xterm.c (x_term_init): Likewise. * admin/coccinelle/build_string.cocci: Semantic patch to convert from make_string to build_string.

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-26  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* coccinelle/build_string.cocci: Semantic patch
+	to convert from make_string to build_string.
+
 2012-06-24  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	First Coccinelle semantic patch.
