--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-26  Martin Rudalics  <rudalics@gmx.at>
+
+	* calendar/calendar.el (calendar-exit): Don't try to delete or
+	iconify last frame.  See:
+	http://lists.gnu.org/archive/html/emacs-devel/2012-06/msg00372.html
+
 2012-06-25  Jim Diamond  <Jim.Diamond@AcadiaU.ca>  (tiny change)
 
 	* server.el (server-process-filter): Remember dir in the
