* lisp/files.el (file-name-base): New convenience function. * lisp/autoinsert.el, lisp/cus-dep.el, lisp/doc-view.el, lisp/image-dired.el, * lisp/woman.el, lisp/eshell/esh-cmd.el, lisp/progmodes/ada-xref.el, * lisp/progmodes/cc-defs.el, lisp/progmodes/cperl-mode.el, * lisp/progmodes/flymake.el, lisp/progmodes/gud.el, lisp/progmodes/idlwave.el, * lisp/textmodes/ispell.el, lisp/textmodes/reftex-ref.el, * lisp/textmodes/tex-mode.el: Use it. Did not touch cedet and org because they are maintained elsewhere.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,14 @@
+2012-06-26  Sam Steingold  <sds@gnu.org>
+
+	* files.el (file-name-base): New convenience function.
+	* autoinsert.el, cus-dep.el, doc-view.el, image-dired.el,
+	* woman.el, eshell/esh-cmd.el, progmodes/ada-xref.el,
+	* progmodes/cc-defs.el, progmodes/cperl-mode.el,
+	* progmodes/flymake.el, progmodes/gud.el, progmodes/idlwave.el,
+	* textmodes/ispell.el, textmodes/reftex-ref.el,
+	* textmodes/tex-mode.el: Use it.
+	Did not touch cedet and org because they are maintained elsewhere.
+
 2012-06-26  Martin Rudalics  <rudalics@gmx.at>
 
 	* calendar/calendar.el (calendar-exit): Don't try to delete or
