Fix parallel bootstrap on MS-Windows in lib/ and lisp/.
 lib/makefile.w32-in ($(GNULIBOBJS)): Depend on stamp_BLD.  This
 replaces separate dependency for each object file, which required
 the same object file to be mentioned twice, causing failures in
 parallel builds.
 lisp/makefile.w32-in (compile, compile-always): Depend on
 update-subdirs, not on subdirs.el.  Otherwise, several different
 sub-targets of 'bootstrap' running in parallel could
 simultaneously write to subdirs.el, producing a garbled file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-26  Eli Zaretskii  <eliz@gnu.org>
+
+	* lib/makefile.w32-in ($(GNULIBOBJS)): Depend on stamp_BLD.  This
+	replaces separate dependency for each object file, which required
+	the same object file to be mentioned twice, causing failures in
+	parallel builds.
+
 2012-06-26  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Clean out last vestiges of the old HAVE_CONFIG_H stuff.
