unexmacosx.c (copy_data_segment): Added two section names used on Mac OS X Lion: __mod_init_func and __mod_term_func.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-06-26  John Wiegley  <johnw@newartisans.com>
 
+	* unexmacosx.c (copy_data_segment): Added two section names used
+	on Mac OS X Lion: __mod_init_func and __mod_term_func.
+
 	* alloc.c (mark_memory): Do not check with -faddress-sanitizer
 	when building with Clang.
 
@@ -167,6 +170,11 @@
 	This improves on the previous patch, which introduced a bug
 	when time_t is unsigned and as wide as intmax_t.
 	See <http://bugs.gnu.org/9000#51>.
+
+2012-06-26  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* gnutls.c (emacs_gnutls_handshake): Only retry if
+	GNUTLS_E_INTERRUPTED.
 
 2012-06-23  Eli Zaretskii  <eliz@gnu.org>
 
