In Lisp manual, don't capitalize pty.
* doc/lispref/processes.texi (Asynchronous Processes, Input to Processes):
* doc/lispref/internals.texi (Process Internals): Don't capitalize "pty".

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-27  Chong Yidong  <cyd@gnu.org>
+
+	* processes.texi (Asynchronous Processes, Input to Processes):
+	* internals.texi (Process Internals): Don't capitalize "pty".
+
 2012-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	* processes.texi (Asynchronous Processes): Make the pty vs pipe
